@@ -3,6 +3,7 @@ package com.banenor.controller;
 import com.banenor.dto.*;
 import com.banenor.security.JwtTokenUtil;
 import com.banenor.service.AuthService;
+import com.banenor.service.EmailService;
 import com.banenor.service.UserService;
 import io.jsonwebtoken.ExpiredJwtException;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -10,6 +11,7 @@ import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.*;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -17,7 +19,6 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import reactor.core.publisher.Mono;
 
-import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -29,40 +30,45 @@ import java.util.List;
 public class AuthController {
 
     private final AuthService authService;
-    private final UserService userService;
     private final JwtTokenUtil jwtTokenUtil;
+    private final EmailService emailService;
+    private final UserService userService;
 
-    /**
-     * Only admins may create new users.
-     */
     @PostMapping("/register")
-    public Mono<ResponseEntity<AuthResponse>> register(
+    @PreAuthorize("hasRole('ADMIN')")
+    public Mono<ResponseEntity<Void>> register(
             @AuthenticationPrincipal UserDetails currentUser,
-            @Valid @RequestBody RegistrationRequest req) {
-
-        // ------------------------------------------------
-        // return 403 if not ADMIN, with correct generic
-        // ------------------------------------------------
+            @Valid @RequestBody RegistrationRequest req
+    ) {
         if (currentUser == null ||
                 currentUser.getAuthorities().stream()
                         .map(GrantedAuthority::getAuthority)
                         .noneMatch("ROLE_ADMIN"::equals)) {
-            return Mono.just(
-                    ResponseEntity.<AuthResponse>status(HttpStatus.FORBIDDEN).build()
-            );
+            return Mono.just(ResponseEntity.status(HttpStatus.FORBIDDEN).build());
         }
 
-        // ------------------------------------------------
-        // otherwise register then immediately login
-        // ------------------------------------------------
         return authService.register(req)
-                .flatMap(u -> authService.login(
-                        new LoginRequest(u.getUsername(), req.getPassword())
-                ))
-                .map(token -> ResponseEntity
-                        .status(HttpStatus.CREATED)
-                        .body(token)
-                );
+                .flatMap(user -> {
+                    String verificationToken = jwtTokenUtil.generateToken(user.getUsername(), List.of());
+                    String link = emailService.buildVerificationLink(verificationToken);
+                    return emailService.sendVerificationEmail(user.getEmail(), link);
+                })
+                .thenReturn(ResponseEntity.status(HttpStatus.CREATED).build());
+    }
+
+    @GetMapping("/verify")
+    public Mono<ResponseEntity<String>> verifyEmail(@RequestParam("token") String token) {
+        try {
+            jwtTokenUtil.getUsernameFromToken(token);
+        } catch (ExpiredJwtException ex) {
+            // allow expired for verification
+        } catch (Exception ex) {
+            log.warn("Invalid verification token: {}", ex.getMessage());
+            return Mono.just(ResponseEntity.badRequest().body("Invalid verification token"));
+        }
+
+        return authService.verifyToken(token)
+                .thenReturn(ResponseEntity.ok("Email successfully verified. You can now log in."));
     }
 
     @PostMapping("/login")
@@ -75,27 +81,20 @@ public class AuthController {
 
     @PostMapping("/logout")
     public Mono<ResponseEntity<Void>> logout(
-            @RequestHeader(value = "Authorization", required = false) String header) {
-
+            @RequestHeader(value = "Authorization", required = false) String header
+    ) {
         if (header != null && header.startsWith("Bearer ")) {
             String token = header.substring(7);
             return authService.logout(token)
-                    .thenReturn(
-                            // explicitly Void
-                            ResponseEntity.<Void>ok().build()
-                    );
+                    .thenReturn(ResponseEntity.ok().<Void>build());
         }
-
-        // no token? still 200 / empty
-        return Mono.just(
-                ResponseEntity.<Void>ok().build()
-        );
+        return Mono.just(ResponseEntity.ok().<Void>build());
     }
 
     @PostMapping("/reset-password")
     public Mono<ResponseEntity<String>> resetPassword(
-            @Valid @RequestBody PasswordResetRequest request) {
-
+            @Valid @RequestBody PasswordResetRequest request
+    ) {
         return authService.resetPassword(request)
                 .thenReturn(ResponseEntity.ok("Password reset successful"));
     }
@@ -103,64 +102,54 @@ public class AuthController {
     @PostMapping("/change-password")
     public Mono<ResponseEntity<String>> changePassword(
             @AuthenticationPrincipal UserDetails currentUser,
-            @Valid @RequestBody PasswordChangeRequest request) {
-
+            @Valid @RequestBody PasswordChangeRequest request
+    ) {
         if (currentUser == null) {
-            log.debug("Unauthorized attempt to change password");
+            log.debug("Unauthorized change-password attempt");
             return Mono.just(ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Unauthorized"));
         }
-
-        log.debug("User '{}' is attempting to change password", currentUser.getUsername());
+        log.debug("User '{}' changing password", currentUser.getUsername());
         return authService.changePassword(request)
                 .thenReturn(ResponseEntity.ok("Password changed successfully"));
     }
 
     @PostMapping("/refresh")
     public Mono<ResponseEntity<AuthResponse>> refreshToken(
-            @RequestHeader(value = "Authorization", required = false) String header) {
-
+            @RequestHeader(value = "Authorization", required = false) String header
+    ) {
         if (header == null || !header.startsWith("Bearer ")) {
-            return Mono.just(
-                    ResponseEntity.<AuthResponse>status(HttpStatus.UNAUTHORIZED).build()
-            );
+            return Mono.just(ResponseEntity.status(HttpStatus.UNAUTHORIZED).build());
         }
 
         String raw = header.substring(7);
-        String username;
+        String userName;
         try {
-            username = jwtTokenUtil.getUsernameFromToken(raw);
+            userName = jwtTokenUtil.getUsernameFromToken(raw);
         } catch (ExpiredJwtException e) {
-            // allow refresh if only expired
-            username = e.getClaims().getSubject();
+            userName = e.getClaims().getSubject();
         } catch (Exception ex) {
-            return Mono.just(
-                    ResponseEntity.<AuthResponse>status(HttpStatus.UNAUTHORIZED).build()
-            );
+            return Mono.just(ResponseEntity.status(HttpStatus.UNAUTHORIZED).build());
         }
 
-        if (username == null || username.isBlank()) {
-            return Mono.just(
-                    ResponseEntity.<AuthResponse>status(HttpStatus.UNAUTHORIZED).build()
-            );
+        if (userName == null || userName.isBlank()) {
+            return Mono.just(ResponseEntity.status(HttpStatus.UNAUTHORIZED).build());
         }
-        String trimmed = username.trim();
+
+        String trimmed = userName.trim();
 
         return userService.findEntityByUsername(trimmed)
                 .flatMap(user -> {
                     List<String> roles = user.getRole() != null
                             ? List.of("ROLE_" + user.getRole().toUpperCase())
-                            : Collections.emptyList();
-
+                            : List.of();
                     String newToken = jwtTokenUtil.generateToken(trimmed, roles);
-                    long expiresIn = (jwtTokenUtil
-                            .getExpirationDateFromToken(newToken)
-                            .getTime() - System.currentTimeMillis()) / 1000;
-
+                    long expiresIn = (jwtTokenUtil.getExpirationDateFromToken(newToken).getTime()
+                            - System.currentTimeMillis()) / 1000;
                     AuthResponse resp = new AuthResponse();
                     resp.setToken(newToken);
                     resp.setUsername(trimmed);
                     resp.setExpiresIn(expiresIn);
-
+                    resp.setRoles(roles);
                     return Mono.just(ResponseEntity.ok(resp));
                 });
     }
@@ -168,59 +157,24 @@ public class AuthController {
     @GetMapping("/me")
     public Mono<ResponseEntity<UserDTO>> getCurrentUser(
             @RequestHeader(value = "Authorization", required = false) String header,
-            @AuthenticationPrincipal UserDetails currentUser) {
-
+            @AuthenticationPrincipal UserDetails currentUser
+    ) {
         if (currentUser != null) {
-            String uname = currentUser.getUsername();
-            try {
-                Long id = Long.valueOf(uname);
-                return userService.getUserById(id)
-                        .map(ResponseEntity::ok)
-                        .defaultIfEmpty(
-                                ResponseEntity.<UserDTO>notFound().build()
-                        );
-            } catch (NumberFormatException ex) {
-                return userService.getUserByUsername(uname)
-                        .map(ResponseEntity::ok)
-                        .defaultIfEmpty(
-                                ResponseEntity.<UserDTO>notFound().build()
-                        );
-            }
+            return userService.getUserByUsername(currentUser.getUsername())
+                    .map(ResponseEntity::ok)
+                    .defaultIfEmpty(ResponseEntity.notFound().build());
         }
-
         if (header != null && header.startsWith("Bearer ")) {
             String raw = header.substring(7), uname;
             try {
                 uname = jwtTokenUtil.getUsernameFromToken(raw);
             } catch (Exception e) {
-                return Mono.just(
-                        ResponseEntity.<UserDTO>status(HttpStatus.UNAUTHORIZED).build()
-                );
+                return Mono.just(ResponseEntity.status(HttpStatus.UNAUTHORIZED).build());
             }
-            if (uname == null || uname.isBlank()) {
-                return Mono.just(
-                        ResponseEntity.<UserDTO>status(HttpStatus.UNAUTHORIZED).build()
-                );
-            }
-            String trimmed = uname.trim();
-            try {
-                Long id = Long.valueOf(trimmed);
-                return userService.getUserById(id)
-                        .map(ResponseEntity::ok)
-                        .defaultIfEmpty(
-                                ResponseEntity.<UserDTO>notFound().build()
-                        );
-            } catch (NumberFormatException ex) {
-                return userService.getUserByUsername(trimmed)
-                        .map(ResponseEntity::ok)
-                        .defaultIfEmpty(
-                                ResponseEntity.<UserDTO>notFound().build()
-                        );
-            }
+            return userService.getUserByUsername(uname.trim())
+                    .map(ResponseEntity::ok)
+                    .defaultIfEmpty(ResponseEntity.notFound().build());
         }
-
-        return Mono.just(
-                ResponseEntity.<UserDTO>status(HttpStatus.UNAUTHORIZED).build()
-        );
+        return Mono.just(ResponseEntity.status(HttpStatus.UNAUTHORIZED).build());
     }
 }
